@@ -1,13 +1,13 @@
 d0bdcbc66c943f95d94094510a7225f8  ./.github/workflows/release.yml
 bc48c8ed5023b81a6bde232593e5ec47  ./.gitignore
 4a6fa59b1c01aecca6b7504953723f01  ./.gitmodules
-51ba62d7a7dd97fd4f263c740b11406f  ./CHANGELOG
+ba437e2eac994399359648caac7c84c8  ./CHANGELOG
 04aff3cce210e9c2a8f21df593f07b19  ./COPYING
 5f630c45a220e988d7c6cb643575f3a0  ./Docker-builder.sh
 d221c605820660f1d244c6213e28d08b  ./IMG-builder.sh
 ea29c0147a158039c0851426ae8acff4  ./ISO-builder.sh
 cc04d3c28306689fde5be96638e22f70  ./LICENSE
-58430fdce41cb00a87eb88ebee58fef0  ./README.md
+e7af1e243df13b75752ffd1311e0f97e  ./README.md
 77a9103c2abf925fda8dfe8ac8575bdb  ./RepoMan.sh
 53712c37e5d406d6e2396d0133c63e0a  ./assets/BCLD_FLOW.png
 b70ef6c6e2ba24acef78d533b2bca185  ./assets/ISO_BUILDER_FLOW.png
@@ -101,14 +101,13 @@ df6732bf6b392a7cc69200bd58fb31b9  ./script/crosdump_logger.sh
 a0ad3b8dcdd06327c49632ade4f76658  ./script/rsyslogger.sh
 f954697a6f68e7c25e05e75310080794  ./script/startup.sh
 433a2f4f80224f7c115b47a656b7c57c  ./script/usb_logger.sh
-a9438d8127755ce4b88d174b974bd8fa  ./test/01_PER-BUILD.bats
-a663e4ea0ffd0a9aff999f54d7a9a1d5  ./test/02_POST-BUILD.bats
-e62115b88e8db3d03c242ac322b7f9a4  ./test/BCLD-BATS.sh
+1bcc8a1b1ae5c9227f5d9c39106e5d94  ./test/00_BCLD-BUILD.bats
+5089b751a7787f1e874e58f36e63e90d  ./test/BCLD-BATS.sh
 13fc6ce9dd7d8170534714cd7a3ccc01  ./test/bcld_test.sh
 3c6d9bad67a59baeb81ef905281f3616  ./test/common-setup
 d17592b1867453e7e203d9d13b2251e4  ./tools/DOCKER-install.sh
 7d874e194ead3b20adcf839a09edc38d  ./tools/EXPORTER-TOOLKIT.sh
-faeaf50bbcb82ded18fd37e47099d2a0  ./tools/HashGen.sh
+06f98cfbd9bc8bf4a8da8e0c9b9b8519  ./tools/HashGen.sh
 853ffb8a5e4bea6c1b108f07157924c0  ./tools/NEXUS-deploy.sh
 0a430cdd84ba79567389d5440f23a3ba  ./tools/bcld-repo-manager/chrepoman.sh
 bc8d6f1036b0463c7f1703414b04f691  ./tools/bcld-repo-manager/generate_release.sh
