@@ -1,1 +1,1 @@
-bfde0f9f524a76c5bf69969884d2c713  ./test/bcld.md5
+cd54c9e54968311caec0e94d26e6ab4c  ./test/bcld.md5
