@@ -3,6 +3,7 @@
 ## 2024
 
 ### January
+* `2024-01-22 18:01:45` : BATS tests refactored into single file: `./test/00_BCLD-BUILD.bats`
 * `2024-01-22 16:05:02` : Removing `test/00_PRE-BUILD.bats` because tests are not portable
 * `2024-01-12 16:58:28` : Added `shellcheck` to `BUILD` packages and `./test/BCLD-BATS.sh`
 * `2024-01-12 14:27:53` : Added pactl scan before starting the app to detect hidden sinks
